// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownLink /> renders with dropdown menu 1`] = `
<div
  className="nav__container"
>
  <div
    className="nav__link"
    data-test-nav-link={true}
    onClick={[MockFunction]}
  >
    <div
      className="nav__link-text-wrapper"
    >
      <div
        className="nav__link-text"
      >
        Elon Musk
      </div>
      <div
        className="nav__link-subtext"
      >
        Select a company
      </div>
    </div>
    <i
      className="material-icons-outlined nav__link-icon"
    >
      settings
    </i>
  </div>
  <Connect(DropdownMenu) />
</div>
`;

exports[`<DropdownLink /> renders without dropdown menu 1`] = `
<div
  className="nav__container"
>
  <div
    className="nav__link"
    data-test-nav-link={true}
    onClick={[MockFunction]}
  >
    <div
      className="nav__link-text-wrapper"
    >
      <div
        className="nav__link-text"
      >
        Elon Musk
      </div>
      <div
        className="nav__link-subtext"
      >
        Select a company
      </div>
    </div>
    <i
      className="material-icons-outlined nav__link-icon"
    >
      settings
    </i>
  </div>
</div>
`;
